--- a/index.css
+++ b/index.css
@@ -18,7 +18,56 @@ section {
 }
 
 .container {
-    background-color: red;
+    background-color: rgb(144, 104, 44);
     width: 90%;
     max-width: 400px;
+    border-radius: 3%;
+    overflow: hidden;
+}
+
+.display {
+    background-color: beige;
+    width: 100%;
+    height: 100px;
+    text-align: right;
+    padding: 15px;
+    font-size: 20px;
+    position: relative;
+}
+
+.display-1 {
+    font-size: 15px;
+    height: 20px;
+    overflow: hidden;
+}
+
+.display-result {
+    position: absolute;
+    left: 40px;
+    bottom: 35px;
+}
+
+.all-buttons {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 25px;
+    transition: 0.2s;
+}
+
+.button:hover {
+    background-color: beige;
+    color: rgb(57, 45, 27);
+    opacity: 0.4;
+}
+
+.equal {
+    grid-column: 3/5;
+    font-size: 30px;
 }
